testdata/invalid/internal/app/order_svc.go
package app

// Has layer suffix _svc in app/ dir — should trigger naming.no-layer-suffix

func ProcessOrder() {}
